:sparkles: add db entities